# Snake_Game

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  snake.cpp  snake.h  snake.out
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  snake
include/: color.hpp  game.hpp  platform.hpp  render.hpp  score.hpp  types.hpp  ui.hpp  util.hpp
src/: game.cpp  main.cpp  platform.cpp  render.cpp  score.cpp  ui.cpp  util.cpp
